Bug 1124610 - Call PostHasTransparency for corrupt images that we treat as usable. r=jrmuizel, a=sledru